--- a/assets/scss/pages/index.scss
+++ b/assets/scss/pages/index.scss
@@ -207,10 +207,15 @@ button p {
 
 /*----------------------------------- GAME BOARD */
 
+.my-card-column {
+    /*see media queries below for adjustments to card column size to fit other screens*/
+    height: 130px;
+}
+
 .card-container {
     /*see media queries below for adjustments to card size to fit other screens*/
-    width: 160px;
-    height: 160px;
+    width: 120px;
+    height: 120px;
     border-radius: 8px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
@@ -238,10 +243,7 @@ button p {
 /*----------------------------------- MEDIA QUERIES */
 
 @media screen and (max-width: 1200px) {  /*phones, tablets and smaller desktops*/
-    .card-container {
-        width: 120px;
-        height: 120px;
-    }
+    
 }
 
 @media screen and (max-width: 992px) { /*phones and tablets*/
@@ -251,6 +253,9 @@ button p {
     .card-container {
         width: 90px;
         height: 90px;
+    }
+    .my-card-column {
+        height: 100px;
     }
 }
 
@@ -266,6 +271,9 @@ button p {
         width: 120px;
         height: 120px;
     }
+    .my-card-column {
+        height: 130px;
+    }
 }
 
 @media screen and (max-width: 576px){ /*small phones*/
@@ -273,5 +281,8 @@ button p {
     .card-container {
         width: 80px;
         height: 80px;
+    }
+    .my-card-column {
+        height: 90px;
     }
 }
